--- a/css/styles.css
+++ b/css/styles.css
@@ -18,26 +18,41 @@ body {
     letter-spacing: 0.03em;
 }
 
+h1, h2, h3, h4, h5, h6, p, ul {
+    margin: 0;
+	padding: 0;
+	border: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 .list {
     padding: 0;
     margin: 0;
     list-style: none;
 }
 
-.page-header {
-    background-color: #ECECEC;
-}
-
 .container {
     width: 1200px;
-    padding: 94px 15px;
+    padding: 0 15px;
     margin: 0 auto;
 }
 
 /* Header */
 
+.page-header {    
+    height: 80px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+    border-bottom: 1px solid #ECECEC;
+}
+
 .container.hd {
-    padding: 24px 15px 25px 15px;
+    padding: 0 15px;
 }
 
 
@@ -48,6 +63,7 @@ body {
 
 .nav-hd {
     display: flex;
+    align-items: center;
 }
 
 /* Logo */
@@ -119,12 +135,14 @@ body {
 /* Hero */
 
 .container.hero {
-    padding: 200px 15px;
+    padding: 0;
 
 }
 
 .hero {
     text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
 .hero,
@@ -133,8 +151,10 @@ body {
 }
 
 .hero-title {
+    width: 696px;
     padding: 0;
-    margin: 0 0 30px 0;
+    margin: auto;
+    margin-bottom: 30px;
     
     color: #FFFFFF;
     font-weight: 900;
@@ -192,6 +212,11 @@ body {
 
 /* Benefits */
 
+.section.benefits {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
 .benefits.list {
     display: flex;
 }
@@ -221,6 +246,8 @@ body {
     color: var(--title-text-color);
     font-weight: 700;
     line-height: 1.14;
+
+    font-size: 36px;
 }
 
 .ocupation {
@@ -238,6 +265,9 @@ body {
 /* Comand */
 
 .section-comand {
+    padding-top: 94px;
+    padding-bottom: 94px;
+
     background-color: #F5F4FA;
 }
 
@@ -284,13 +314,17 @@ body {
 
 /* Footer */
 
-.container-ft {
+.container {
     width: 1200px;
-    padding: 60px 15px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     margin: 0 auto;
 }
 
 .logo-footer {
+    display: inline-block;
+    margin-bottom: 20px;
+
     font-family: Raleway, cursive;
     font-size: 26px;
     line-height: 1.2;
@@ -298,12 +332,8 @@ body {
     text-decoration: none
 }
 
-.contact-ft.list {
-    margin-top: 20px;
-}
-
 .contact-ft.list li:nth-child(n + 2) {
-    padding-top: 9px;
+    margin-top: 9px;
 }
 
 .contact-ft {
@@ -332,6 +362,7 @@ body {
 /* Work-nav */
 
 .work-nav.list {
+    padding: 0;
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
@@ -358,10 +389,9 @@ body {
     letter-spacing: 0.03em;
 }
 
-.flex-container {
+.examples.list {
     display: flex;
     flex-wrap: wrap;
-
 }
 
 .card {
